--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,10 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  flutter_staggered_grid_view: ^0.7.0
   flutter:
     sdk: flutter
+    
 
   cupertino_icons: ^1.0.8
 
